Changelog
=========

1.0.5 - Unreleased

- Fixes cssregistry order. Upgrade step 1102 [10936].
  [Cesar Gonzalez]

1.0.4 - April 02, 2014
----------------------

- Add unit tests [10656].
  [Marcin Staniszczak]

- Adds README documentation.
  [Jose Dinuncio]

1.0.3 - March 07, 2014
----------------------

- Fixes tests.
  [Jose Dinuncio]

- Improves speed in user search [10169].
  [Jose Dinuncio].

- Adds version.txt.
  [Jose Dinuncio]

1.0.2 - December 06, 2013
-------------------------

- Adds lost hotfix.
  [Jose Dinuncio]

1.0.1 - November 20, 2013
-------------------------

- Adds missing images of dynatree jquery plugin. Adds main.js resource [9049].
  [Cesar Gonzalez]

- Adds dynatree jquery plugin. Upgrade step 1100.
  [Cesar Gonzalez]

- Adds vocabualry utility.
  [Jose DInuncio]

- Add more js scripts for stream and casts.
  [Vitaliy Podoba]

1.0.0 - October 24, 2013
------------------------

- Add jquery selection field js plugin.
  [Vitaliy Podoba]

- Adds search keywords.
  [Jose Dinuncio]

- Adds custom event for portlet loading complete.
  [Cesar Gonzalez]

- Attach portlet buttons when deferred porlets are complete
  [Cesar Gonzalez]

- Initial release.